[package]
name = "vane-engine"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "web-programming::http-server"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "reverse-proxy", "http", "tls"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Runtime engine for the vane proxy: executor, listeners, TLS, and built-in middleware"

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["aws-lc-rs", "h3", "cgi"]

[features]
default = ["aws-lc-rs", "h3", "cgi"]
aws-lc-rs = [
	"rustls/aws-lc-rs",
	"tokio-rustls/aws-lc-rs",
	"hyper-rustls/aws-lc-rs",
	# Propagate the crypto backend choice into instant-acme so its
	# default features (which pull in *both* aws-lc-rs and ring)
	# don't double-register and break rustls's auto-detect. The `?`
	# only fires when `acme` is also enabled.
	"instant-acme?/aws-lc-rs",
]
ring = ["rustls/ring", "tokio-rustls/ring", "hyper-rustls/ring", "instant-acme?/ring"]
h3 = ["dep:quinn", "dep:quinn-proto", "dep:h3", "dep:h3-quinn"]
cgi = []
acme = ["dep:fs4", "dep:futures", "dep:instant-acme", "dep:rcgen"]
# Cloudflare DNS-01 provider. Pulls reqwest only in this feature
# combination so the default `acme`-only build doesn't carry the
# HTTP client unnecessarily.
cloudflare = ["acme", "dep:reqwest"]

[dependencies]
arc-swap = "1.9.1"
async-trait = { workspace = true }
base64 = "0.22"
bytes = "1.11.1"
clienthello = { workspace = true }
dashmap = "6.1.0"
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"] }
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1"
hyper = { version = "1.9.0", features = ["server", "http1", "http2", "client"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "rustls-native-certs", "tls12"] }
hyper-util = { version = "0.1.20", features = ["tokio", "client", "client-legacy", "server-auto", "http1", "http2"] }
memchr = "2.8.0"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
parking_lot = "0.12.5"
pin-project-lite = "0.2.17"
prometheus-parse = "0.2"
rand = "0.10"
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
rustls-pki-types = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
# `time` powers CRL `nextUpdate` parsing (via `x509-parser::ASN1Time`)
# and the daemon-wide CRL refresh scheduler. `rcgen` (dev-dep) also
# uses `time` so the workspace already pins a compatible version.
time = "0.3"
tokio = { version = "1.52.2", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = "0.7.18"
tower-service = "0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["registry"] }
# Used by `wasm_fetch` to resolve relative `Location` headers when
# following redirects. `hyper`'s `Uri` lacks a base-relative join.
url = "2"
vane-core = { workspace = true }
x509-parser = "0.18"

# H3 stack — gated behind the `h3` feature per spec/architecture/16-crate-layout.md.
# Optional so non-H3 builds don't pull quinn / h3 / quinn-proto into the dep graph.
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"], optional = true }
quinn-proto = { version = "0.11", default-features = false, optional = true }

# ACME stack — gated behind the `acme` feature.
# `fs4` provides cross-platform `flock(2)` for `AcmeStore::with_lock`.
# `futures` is needed for `BoxFuture` in the `with_lock` closure signature.
# `instant-acme` is the RFC 8555 client (HTTP-01 + DNS-01).
# `rcgen` generates ECDSA / RSA keypairs and CSRs at issuance time.
fs4 = { version = "1.1", default-features = false, features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
# `default-features = false` to keep instant-acme from pulling
# `aws-lc-rs` AND `ring` simultaneously (its default feature set
# includes both, which makes rustls's `CryptoProvider::install_default`
# auto-detect fail). The active crypto backend is wired via the
# `aws-lc-rs?` / `ring?` features above. `hyper-rustls` is
# instant-acme's HTTP client feature; `rcgen` is unused (we
# build our own CSR via vane-engine's rcgen dep).
instant-acme = { version = "0.8", default-features = false, features = ["hyper-rustls"], optional = true }
rcgen = { version = "0.14", optional = true }
# Cloudflare provider HTTP client. `rustls-tls-native-roots-no-provider`
# matches the workspace policy: stay backend-agnostic so the
# `aws-lc-rs?` / `ring?` features in this crate can pick the rustls
# crypto provider without conflicting with reqwest's default `ring`.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots-no-provider", "json"], optional = true }

# `libc` is already in the workspace dep graph (transitively via tokio,
# rustls, hyper, ...). The CGI driver promotes it to a direct dep so
# the `pre_exec` closure can call setuid / setgid / setrlimit
# directly. Gated to `cfg(unix)` since CGI is unix-only — non-unix
# builds simply never compile the CGI module's `pre_exec` path.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
async-trait = { workspace = true }
rcgen = "0.14"
serial_test = "3"
tempfile = "3"
# `early-data` is only needed by the `zero_rtt` integration test client;
# production builds (which use the runtime [dependencies] entry) don't
# pull this feature.
tokio-rustls = { version = "0.26", default-features = false, features = ["early-data"] }
vane-testutil = { workspace = true, features = ["h3", "acme"] }
# Cloudflare provider unit tests use wiremock to stub the v4 API
# without hitting the real Cloudflare endpoint. Dev-only — never
# enters the runtime dep graph.
wiremock = "0.6"
