[package]
name = "vane-engine"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "web-programming::http-server"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "reverse-proxy", "http", "tls"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Runtime engine for the vane proxy: executor, listeners, TLS, and built-in middleware"

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["aws-lc-rs", "h3", "cgi"]

[features]
default = ["aws-lc-rs", "h3", "cgi"]
aws-lc-rs = [
	"rustls/aws-lc-rs",
	"tokio-rustls/aws-lc-rs",
	"hyper-rustls/aws-lc-rs",
	"rustls-ticketer/aws-lc-rs",
	# instant-acme defaults pull both backends; propagate explicitly to keep rustls auto-detect single-provider.
	"instant-acme?/aws-lc-rs",
	# `?` so consumers building without `h3` (quinn off) don't get a spurious enable.
	"quinn?/rustls-aws-lc-rs",
]
ring = [
	"rustls/ring",
	"tokio-rustls/ring",
	"hyper-rustls/ring",
	"rustls-ticketer/ring",
	"instant-acme?/ring",
	"quinn?/rustls-ring",
]
h3 = [
	"dep:quinn",
	"dep:quinn-proto",
	"dep:h3",
	"dep:h3-body",
	"dep:h3-quinn",
	"dep:quinn-shared-socket",
	"dep:virtual-socket",
]
cgi = []
acme = ["dep:acme-provider", "dep:fs4", "dep:futures", "dep:instant-acme", "dep:rcgen"]
# Flips acme-provider/cloudflare (where the DnsProvider impl lives).
cloudflare = ["acme", "acme-provider/cloudflare"]

[dependencies]
arc-swap = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
cgi-request = { workspace = true }
cgi-response = { workspace = true }
clienthello = { workspace = true }
dashmap = "6.1.0"
# Direct OCSP RustCrypto deps: `der` for Decode/Encode on OCSP req/resp; `x509-cert` for Certificate decode (some types not re-exported by x509-ocsp).
der = "0.8"
guess = { workspace = true, features = ["classify"] }
hickory-tower-resolver = { workspace = true }
http = "1"
http-body = "1.0.1"
http-body-util = "0.1"
http-retry-policy = { workspace = true }
hyper = { version = "1", features = ["server", "http1", "http2", "client"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "rustls-native-certs", "tls12"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "server-auto", "http1", "http2"] }
idna = "1"
# `forward_client_ip` middleware uses IpNet to parse the
# trusted_proxies CIDR list and decide whether to honour inbound
# `X-Forwarded-For` / `Forwarded:` chains.
ipnet = "2.12.0"
memchr = "2.8.0"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
ocsp-staple = { workspace = true, features = ["fetch"] }
parking_lot = "0.12"
peeked-stream = { workspace = true }
pin-project-lite = "0.2.17"
prometheus-parse = "0.2"
quinn-shared-socket = { workspace = true, optional = true }
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-crl-refresh = { workspace = true }
rustls-native-certs = "0.8"
rustls-native-roots-cache = { workspace = true }
rustls-pem-roots = { workspace = true }
rustls-pemfile = "2"
rustls-pki-types = "1"
rustls-sni-resolver = { workspace = true }
rustls-ticketer = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# RFC 6960 §4.1.1 mandates SHA-1 for OCSP CertId (routing, not security); `oid` provides the AssociatedOid x509-ocsp needs.
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.11.0"
thiserror = "2"
# CRL `nextUpdate` parsing (via x509-parser::ASN1Time) and the workspace refresh scheduler.
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-bind-retry = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["registry"] }
# wasm_fetch redirect `Location` resolution; hyper::Uri lacks base-relative join.
url = "2"
vane-core = { workspace = true }
virtual-socket = { workspace = true, optional = true }
x509-cert = "0.2"
# `builder` enables the OcspRequest builder; `std` lets tests use SystemTime → OcspGeneralizedTime.
x509-ocsp = { version = "0.2", default-features = false, features = ["builder", "std"] }
x509-parser = "0.18"
zeroize = { version = "1", features = ["alloc"] }

# H3 stack — gated behind `h3`.
h3 = { version = "0.0.8", optional = true }
h3-body = { workspace = true, optional = true }
h3-quinn = { version = "0.0.10", optional = true }
# Crypto backend (`rustls-aws-lc-rs` / `rustls-ring`) is selected by the
# crate-level `aws-lc-rs` / `ring` features below — keeping quinn neutral
# here lets the mutual-exclusion `compile_error!` guard in src/lib.rs
# actually take effect for consumers that opt into `ring`.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio"], optional = true }
quinn-proto = { version = "0.11", default-features = false, optional = true }

# ACME stack — gated behind `acme`. fs4: flock for AcmeStore::with_lock.
# futures: BoxFuture for the with_lock signature. instant-acme: RFC 8555 client.
# rcgen: keypair + CSR at issuance. acme-provider: DnsProvider trait (+ Cloudflare via this crate's `cloudflare` flag).
acme-provider = { workspace = true, optional = true }
fs4 = { version = "1.1", default-features = false, features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
# `default-features = false`: instant-acme's defaults pull both aws-lc-rs and ring; the
# `aws-lc-rs?`/`ring?` features above wire the active backend. `hyper-rustls` is its HTTP
# client; `time` + `x509-parser` enable RFC 9773 ARI (RenewalInfo, CertificateIdentifier).
instant-acme = { version = "0.8", default-features = false, features = ["hyper-rustls", "time", "x509-parser"], optional = true }
rcgen = { version = "0.14", optional = true }

# CGI `pre_exec` calls setuid/setgid/setrlimit directly; cfg(unix) since CGI is unix-only.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# splice(2) is Linux-specific. `tokio-splice2` wraps it behind an
# async API that uses tokio's `AsyncFd` for readiness; the engine
# routes bare TCP↔TCP L4 forwards through it on Linux only.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-splice2 = "0.3"

[dev-dependencies]
async-trait = "0.1"
rcgen = "0.14"
serial_test = "3"
tempfile = "3"
# `early-data` is only needed by the zero_rtt test client.
tokio-rustls = { version = "0.26", default-features = false, features = ["early-data"] }
tracing-broadcast = { workspace = true }
# Enable `test-support` on `vane-core` so engine tests (both in-tree
# `#[cfg(test)]` modules and the `tests/` integration suite) can mint
# raw `NodeId` / `MiddlewareId` / `FetchId` / `TerminatorId` /
# `PredicateId` values via `*::for_testing(raw)`.
vane-core = { workspace = true, features = ["test-support"] }
vane-testutil = { workspace = true, features = ["h3", "acme", "ocsp"] }
