[package]
name = "vane-mgmt"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "command-line-utilities"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "management", "ipc", "protocol"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Management protocol (verbs + thin shim over ndjson-rpc) for the vane proxy"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
ndjson-rpc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["net", "io-util", "rt", "sync", "macros", "rt-multi-thread", "time"] }
tokio-util.workspace = true
