[package]
name = "vane-mgmt"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "command-line-utilities"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "management", "ipc", "protocol"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Management protocol (verbs + thin shim over ndjson-rpc) for the vane proxy"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
ndjson-rpc = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
