[package]
name = "vane-testutil"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
# Pulls in the h3 client stack (quinn + h3-quinn + h3 + rustls). Engine
# integration tests opt in via `vane-testutil = { ..., features = ["h3"] }`.
# Production code never depends on this — testutil is dev-only and the
# h3 client dependencies would otherwise cost compile time on every
# downstream test that doesn't exercise H3.
h3 = [
	"dep:quinn",
	"dep:h3",
	"dep:h3-quinn",
	"dep:rustls",
	"dep:rustls-pemfile",
	"dep:bytes",
	"dep:http",
]
# Pulls in the Pebble fixture for ACME HTTP-01 e2e tests + the
# in-process mock DNS server for DNS-01 tests. Engine tests opt
# in via `vane-testutil = { ..., features = ["acme"] }`. The
# Pebble fixture skips at runtime when Docker is unavailable; the
# mock DNS fixture is pure-Rust and runs everywhere a tokio
# runtime can spawn a UDP listener.
acme = [
	"dep:async-trait",
	"dep:hickory-proto",
	"dep:hickory-resolver",
	"dep:hickory-server",
	"dep:parking_lot",
	"dep:reqwest",
	"dep:testcontainers",
	"dep:thiserror",
	"dep:tracing",
	"dep:vane-engine",
	"vane-engine?/acme",
]
# Pulls in the in-process mock OCSP responder used by populator
# integration tests (both the static populator's `ocsp_fetch`
# path and the registry's post-issuance fetch). Re-exported as
# `vane_testutil::ocsp` for backwards compatibility with existing
# call sites; new code can depend on `ocsp-mock-responder` directly.
ocsp = ["dep:ocsp-mock-responder"]
# Generates the wasm component fixtures used by `vane-wasm`'s own
# unit tests and the daemon's wasm-loader / wasm-e2e tests. Pulls
# the `wat` + `wit-component` + `wit-parser` toolchain into
# build-dependencies; gated so testutil consumers that don't
# touch wasm fixtures don't pay the build cost. Outputs land in
# `OUT_DIR` and are exposed via `wasm_fixture::metadata()` /
# `::mismatch()`.
wasm-fixtures = ["dep:wat", "dep:wit-component", "dep:wit-parser"]

[build-dependencies]
wat = { version = "1.248.0", optional = true }
wit-component = { version = "0.248.0", optional = true }
wit-parser = { version = "0.248.0", optional = true }

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "rt", "time", "macros"] }
vane-core = { workspace = true }

# Hyper is used by both the H3 fixture (h3 feature) and the mock
# OCSP responder (ocsp feature). Default-on to keep the existing
# fixture wiring; ocsp adds `server-auto` via `dep:hyper-util`.
hyper = { workspace = true, features = ["server", "http1", "client"] }

# H3 client stack — gated behind the `h3` feature; only engine tests
# that exercise the H3 listener path opt in.
bytes = { workspace = true, optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
http = { workspace = true, optional = true }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"], optional = true }
rustls = { workspace = true, features = ["std"], optional = true }
rustls-pemfile = { version = "2", optional = true }

# Mock OCSP responder — gated behind the `ocsp` feature.
ocsp-mock-responder = { workspace = true, optional = true }

# ACME e2e — gated behind the `acme` feature.
# - `testcontainers` runs the official Pebble image in Docker;
#   pinned to `aws-lc-rs` so its default `ring` doesn't double-
#   register the rustls crypto provider in the workspace dep graph.
# - `reqwest` (`-no-provider` flavour) fetches Pebble's self-signed
#   root CA over its management endpoint without pinning a backend.
# - `hickory-server` + `hickory-proto` power the in-process MockDns
#   server used by DNS-01 tests; `hickory-resolver` runs queries
#   against it from the test process.
# - `vane-engine` is needed because the MockDns provider implements
#   `vane_engine::acme::DnsProvider`.
async-trait = { version = "0.1", optional = true }
hickory-proto = { version = "0.26", optional = true }
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"], optional = true }
hickory-server = { version = "0.26", default-features = false, optional = true }
parking_lot = { workspace = true, optional = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "rustls-no-provider"], optional = true }
# `default-features = false` on testcontainers + explicit
# `aws-lc-rs` feature avoids pulling its `ring` default into the
# workspace's rustls dep graph. Two crypto backends in the same
# rustls instance break `CryptoProvider::install_default`'s
# auto-detect, which the engine's TLS tests rely on.
testcontainers = { version = "0.27", default-features = false, features = ["aws-lc-rs"], optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
vane-engine = { workspace = true, optional = true }
