[package]
name = "vane-testutil"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["aws-lc-rs"]
# Crypto backend selection — mirrors vane-engine's exclusive aws-lc-rs / ring split.
# Propagates onto quinn (h3 fixture), testcontainers (Pebble), and vane-engine.
aws-lc-rs = [
	"rustls?/aws-lc-rs",
	"quinn?/rustls-aws-lc-rs",
	"testcontainers?/aws-lc-rs",
	"vane-engine?/aws-lc-rs",
]
ring = [
	"rustls?/ring",
	"quinn?/rustls-ring",
	"testcontainers?/ring",
	"vane-engine?/ring",
]
# H3 client stack for engine integration tests that exercise the H3 listener.
h3 = [
	"dep:quinn",
	"dep:h3",
	"dep:h3-quinn",
	"dep:rustls",
	"dep:rustls-pemfile",
	"dep:bytes",
	"dep:http",
]
# Pebble (HTTP-01 e2e, skipped at runtime if Docker is unavailable) + in-process MockDns (DNS-01).
acme = [
	"dep:async-trait",
	"dep:hickory-proto",
	"dep:hickory-resolver",
	"dep:hickory-server",
	"dep:parking_lot",
	"dep:reqwest",
	"dep:testcontainers",
	"dep:thiserror",
	"dep:tracing",
	"dep:vane-engine",
	"vane-engine?/acme",
]
# In-process mock OCSP responder; re-exported as `vane_testutil::ocsp`.
ocsp = ["dep:ocsp-mock-responder"]
# Wasm component fixtures for vane-wasm and daemon wasm-loader tests; outputs to OUT_DIR via wasm_fixture::{metadata,mismatch}.
wasm-fixtures = ["dep:wat", "dep:wit-component", "dep:wit-parser"]

[build-dependencies]
wat = { version = "1.251.0", optional = true }
wit-component = { version = "0.251.0", optional = true }
wit-parser = { version = "0.251.0", optional = true }

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt", "time", "macros"] }
vane-core = { workspace = true }

# Process-spawning E2E fixture (VanedFixture): tempdir config trees +
# binary resolution. escargot is the `cargo test` fallback; nextest's
# build-test-bins setup script exports VANE_BIN / VANED_BIN to skip it.
escargot = "0.5"
# Self-signed cert generation for TLS-termination e2e scenarios.
rcgen = "0.14"
tempfile = "3"

# Shared by the H3 fixture and the mock OCSP responder; ocsp adds server-auto via dep:hyper-util.
hyper = { version = "1", features = ["server", "http1", "client"] }

# H3 client stack — gated behind `h3`.
bytes = { version = "1", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
http = { version = "1", optional = true }
# Crypto backend (`rustls-aws-lc-rs` / `rustls-ring`) is selected by this
# crate's `aws-lc-rs` / `ring` features above.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true }
rustls-pemfile = { version = "2", optional = true }

ocsp-mock-responder = { workspace = true, optional = true }

# ACME e2e — gated behind `acme`. testcontainers: Pebble image (aws-lc-rs pinned to keep workspace single-provider).
# reqwest (rustls-no-provider): fetch Pebble's self-signed root over its mgmt endpoint without pinning a backend.
# hickory-server/-proto/-resolver: in-process MockDns for DNS-01. vane-engine: MockDns implements vane_engine::acme::DnsProvider.
async-trait = { version = "0.1", optional = true }
hickory-proto = { version = "0.26", optional = true }
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"], optional = true }
hickory-server = { version = "0.26", default-features = false, optional = true }
parking_lot = { version = "0.12", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "rustls-no-provider"], optional = true }
# Crypto backend (`aws-lc-rs` / `ring`) is selected by this crate's features above.
testcontainers = { version = "0.27", default-features = false, optional = true }
thiserror = { version = "2", optional = true }
tracing = { version = "0.1", optional = true }
vane-engine = { workspace = true, optional = true }
