[package]
name = "vane-wasm"
version.workspace = true
authors.workspace = true
categories = ["network-programming", "wasm"]
edition.workspace = true
homepage.workspace = true
keywords = ["vane", "proxy", "wasm", "wasmtime", "plugin"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "WASM plugin runtime for the vane proxy, built on wasmtime and the Component Model"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
arc-swap = "1.9.1"
async-trait = { workspace = true }
metrics = "0.24"
rand = "0.10"
sha2 = "0.11.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }
tracing = "0.1"
url = "2"
vane-core = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
# Wasm component fixtures used by the unit tests below live in
# vane-testutil's OUT_DIR (so `cargo publish` doesn't trip on a
# build script writing into the source tree). Pull the
# `wasm-fixtures` feature in only here, never as a runtime dep.
vane-testutil = { workspace = true, features = ["wasm-fixtures"] }
