[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
cargo_metadata = "0.23"
clap = { version = "4.6", features = ["derive"] }
fancy-regex = "0.18"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.25"
# `rustls-no-provider` keeps ureq from pulling in its default `ring`
# crypto backend, which would unify with the engine's existing
# `aws-lc-rs` choice and break rustls's auto-detect (the workspace
# pins exactly one provider). xtask's `main` installs the workspace
# provider at startup before any HTTPS call.
ureq = { version = "3.3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots"] }
