[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["aws-lc-rs"]
# Crypto backend selection — mirrors vane-engine's exclusive aws-lc-rs / ring split.
# xtask's `main` reads the selected backend via `cfg(feature = ...)` and
# installs the matching provider before the first `ClientConfig` is built.
aws-lc-rs = ["rustls/aws-lc-rs"]
ring = ["rustls/ring"]

[dependencies]
anyhow = "1"
cargo_metadata = "0.23"
clap = { version = "4.6", features = ["derive"] }
fancy-regex = "0.18"
rustls = { version = "0.23", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.25"
# `rustls-no-provider` avoids ureq's default `ring` (would conflict with the
# workspace's aws-lc-rs and break rustls auto-detect). xtask `main` installs the provider.
ureq = { version = "3.3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots"] }
