[package]
name = "vane-api"
version = "0.9.2"
edition = "2024"
rust-version = { workspace = true }
license = "MIT"
description = "Management REST API for vane reverse proxy"

[features]
console = [
	"dep:axum",
	"dep:utoipa",
	"dep:utoipa-axum",
	"vane-engine/console",
	"vane-primitives/console",
]
swagger-ui = ["dep:utoipa-swagger-ui"]

[dependencies]
vane-primitives = { path = "../primitives" }
vane-engine = { path = "../engine" }
vane-transport = { path = "../transport" }
vane-extra = { path = "../extra" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "multipart"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
fancy-log = "0.1"
envflag = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
x509-parser = "0.18"
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-axum = { version = "0.2", optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }
tar = "0.4"
flate2 = "1"
shellexpand = "3"
hex = "0.4"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
axum = { version = "0.8", features = ["macros"] }

[lints]
workspace = true
